added download button to weather

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Data-driven storytelling, maps, charts and more | Startribune.com</title>
 
 <!-- load common dataviz styles -->
-<link rel="stylesheet" href="../_common_resources/styles/startribune_dataviz_styles.css" /> 
+<link rel="stylesheet" href="_common_resources/styles/startribune_dataviz_styles.css" /> 
 
 <!-- dataviz and custom styles for this page -->
    <style>
