--- a/weather/index.html
+++ b/weather/index.html
@@ -87,6 +87,8 @@
 <p><b><b> <a href="http://stmedia.startribune.com/documents/2003+yearend+wx.pdf">2003</a> * <a href="http://stmedia.startribune.com/documents/2004+yearend+wx.pdf">2004</a> * <a href="http://stmedia.startribune.com/documents/2005+yearend+wx.pdf">2005</a> * <a href="http://stmedia.startribune.com/documents/2006+yearend+wx.pdf">2006</a> * <a href="http://stmedia.startribune.com/documents/2007+Yearend+wx.pdf">2007</a> * <a href="http://stmedia.startribune.com/documents/2008+yearend+wx.pdf">2008</a> * <a href="http://stmedia.startribune.com/documents/2009+yearend+wx.pdf">2009</a> * <a href="http://stmedia.startribune.com/documents/2010+yearend+wx.pdf">2010</a> * <a href="http://stmedia.startribune.com/documents/2011+yearend+wx.pdf">2011</a> * <a href="http://stmedia.startribune.com/documents/2012+yearend+wx.pdf">2012</a> * <a href="http://stmedia.startribune.com/documents/2013+yearend+wx.pdf">2013</a> * <a href="http://stmedia.startribune.com/documents/2014_yearend_wx.pdf">2014</a> * <a href="data/3YearEndWX2015.pdf">2015</a></b></b></p>
 </div>
 
+<div class="chatter" style="text-align:center;margin:10px">Chart values can be toggled using the legends. Time periods can be isolated with the scrubber below each chart.</div>
+
 <div id="monthly" class="block">
 <div class="chartTitle">Monthly weather summaries for <span class="thisYear">2015</span></div>
 <div class="monthBar" id="january">January<div class="summary chatter">
@@ -732,7 +734,7 @@ var chartTemps = c3.generate({
           }
         },
       subchart: { show: true },
-        color: { pattern: ['#801515', '#E7A9A9', '#333','#ddd','#ccc'] },
+        color: { pattern: ['#801515', '#E7A9A9', '#333','#fbdfe7','#b8d3ea'] },
     });
 
 
