padding fixes on demolitions

--- a/20160124-demolition/index.html
+++ b/20160124-demolition/index.html
@@ -16,7 +16,7 @@
 
 <style>
   body { margin:0; padding:0; overflow-x:hidden; }
-  #map { height:900px; width:50%; display:inline-block; float:left !important; }
+  #map { height:780px; width:50%; display:inline-block; float:left !important; }
   .mapbox-logo, .leaflet-control-attribution{ display:none !important; }
   .map-legend .swatch { width:20px; height:20px; float:left; margin-right:10px; }
   .leaflet-popup-close-button { display: none; }
@@ -70,6 +70,8 @@
   #nb_toggle { width:48%; }
   #tornadoOn { font-size:14px; }
   .stat { display:none; }
+
+  .breaker { padding:2px; }
 
   #back { float:left; font-size:1.7em; font-weight:bold; font-family:"Popular"; }
   #forward { float:right; font-size:1.7em; font-weight:bold; font-family:"Popular"; }
