margin fixes on demolitions

--- a/20160124-demolition/index.html
+++ b/20160124-demolition/index.html
@@ -72,6 +72,7 @@
   .stat { display:none; }
 
   .breaker { padding:2px; }
+  #sliderDiv { margin:10px; }
 
   #back { float:left; font-size:1.7em; font-weight:bold; font-family:"Popular"; }
   #forward { float:right; font-size:1.7em; font-weight:bold; font-family:"Popular"; }
