--- a/20160124-demolition/index.html
+++ b/20160124-demolition/index.html
@@ -643,7 +643,16 @@ $('#nb_toggle input').on('change', function () {
   }
 
   function getColor3(d,year) {
-    console.log(d + " " + timeCommunities(year,false,d));
+      // var wrecked = aggregateCommunities(slider.value(),false,d);
+      // var rebuilt = aggregateCommunities(slider.value(),true,d);
+      // var pct = wrecked / (wrecked + rebuilt);
+
+      //  return pct >= .80  ? '#550000' :
+      //     pct >= .60  ? '#801515' :
+      //     pct >= .20  ? '#AA3939' :
+      //     pct >= 0  ? '#FFAAAA' :
+      //     '#ddd';
+
          return timeCommunities(year,false,d) >= 200  ? '#550000' :
           timeCommunities(year,false,d) >= 100  ? '#801515' :
           timeCommunities(year,false,d) >= 50  ? '#AA3939' :
@@ -678,7 +687,7 @@ $('#nb_toggle input').on('change', function () {
       var rebuilt = aggregateNeighborhoods(slider.value(),true,layer.feature.properties.Name);
       var totals = wrecked + rebuilt;
 
-      popup.setContent('<div class="marker-title">' + layer.feature.properties.Name + '</div><div>Teardowns: ' + totals + '</div><div class="teardown">Not Rebuilt: ' + wrecked + " (" + d3.format('%')(wrecked / totals) + ')</div><div class="rebuild">Rebuilt: ' + rebuilt + " (" + d3.format('%')(rebuilt / totals) + ')</div>');
+      popup.setContent('<div class="marker-title">' + layer.feature.properties.Name + '</div><div class="teardown">Not Rebuilt: ' + wrecked + " (" + d3.format('%')(wrecked / totals) + ')</div><div class="rebuild">Rebuilt: ' + rebuilt + " (" + d3.format('%')(rebuilt / totals) + ')</div><div>Total teardowns: ' + totals + '</div>');
       
 
       if (!popup._map) popup.openOn(map);
@@ -731,7 +740,7 @@ $('#nb_toggle input').on('change', function () {
       var rebuilt = aggregateCommunities(slider.value(),true,layer.feature.properties.CommName);
       var totals = wrecked + rebuilt;
 
-      popup.setContent('<div class="marker-title">' + layer.feature.properties.CommName + '</div><div>Teardowns: ' + totals + '</div><div class="teardown">Not Rebuilt: ' + wrecked + " (" + d3.format('%')(wrecked / totals) + ')</div><div class="rebuild">Rebuilt: ' + rebuilt + " (" +  d3.format('%')(rebuilt / totals) + ')</div>');
+      popup.setContent('<div class="marker-title">' + layer.feature.properties.CommName + '</div><div class="teardown">Not Rebuilt: ' + wrecked + " (" + d3.format('%')(wrecked / totals) + ')</div><div class="rebuild">Rebuilt: ' + rebuilt + " (" +  d3.format('%')(rebuilt / totals) + ')</div><div>Total teardowns: ' + totals + '</div>');
       
 
       if (!popup._map) popup.openOn(map);
