--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       .articleName{ color: #333; font-family: Popular; font-size: 26px; line-height: 120%; margin: 10px 0 15px 0; }
       .specialContentWrapper{ width:100%; }
       #sorting_mobile { display:none; }
-      #leftPane { float:left !important; width:65% !important; }
+      #leftPane { float:left !important; width:630px !important; }
       #infobox { font-size:16px; margin:10px; }
       #infobox p { padding:3px; }
       #logo_container { width:208px; }
@@ -33,7 +33,7 @@
       #articlePane { display:inline-block !important;  }
       .articleEntry { margin:30px; }
       .articleName { font-weight:normal; font-size:28px; }
-      .articlePhoto img { border: 1px solid #000; padding:1px; width:100%; max-width:100%; }
+      .articlePhoto img { border: 1px solid #000; padding:1px; width:100%; max-width:100%;  }
       .byline { font-weight:bold; }
       #dataSidebar { float:right !important; display:inline-block !important; width:30% !important; border: 1px solid #ddd; }
       .sectionBox { margin:7px; }
@@ -94,7 +94,6 @@
     .fyre .fyre-comment-article .fyre-comment-head {  margin-top:0 !important; }
     .fyre .fyre-auth { margin:0px 0 0 0 !important; }
     .fyre .fyre-auth .fyre-login-bar, .fyre .fyre-auth .fyre-user-loggedout { color:#61bf1a !important; text-decoration:none !important; }
-    .articlePhoto img { max-width:100%; max-height:250px !important; }
 
     @media only screen and (min-width:650px) {
       .sort-link-mid:hover, .sort-link:hover, .link:hover { background-color:#eee !important; cursor:pointer; }
