--- a/20160218-adverse_events/index.html
+++ b/20160218-adverse_events/index.html
@@ -90,7 +90,7 @@ var chartDecade = c3.generate({
           rotated: true,
           y: {
             tick: {
-             values: ['0', '50', '80', '100'],
+             values: ['0', '50', '100'],
              format: d3.format('r')
             }
         },
