--- a/20160218-adverse_events/index.html
+++ b/20160218-adverse_events/index.html
@@ -31,7 +31,7 @@
 <div class="chartTitle">Hospitals with 10+ adverse events 2005-2015</div>
 <div id="chart"></div>
 
-<table width="100%" cellspacing="0" class="display compact responsive nowrap" id="events"><thead><tr><th>Year</th><th>Hospital</th><th>City</th><th>Category</th><th>Death</th><th>Injury</th><th>Catcode</th></tr></thead></table>
+<table width="100%" cellspacing="0" class="display compact responsive nowrap" id="events"><thead><tr><th>Year</th><th>Hospital</th><th>City</th><th>Category</th><th>Catcode</th></tr></thead></table>
 
 <a href='https://docs.google.com/spreadsheets/d/1jvziIFqm2fkcTgpigumWV2aM8XBPy6SjxE5_pAt9BII/pub?output=csv' target='new_'><button class='downloadButton'>&#9660; Download Data</button></a>
 
@@ -130,8 +130,6 @@ var chartDecade = c3.generate({
                     { "mDataProp": "gsx$hospital.$t" },
                     { "mDataProp": "gsx$city.$t" },
                     { "mDataProp": "gsx$category.$t" },
-                    { "mDataProp": "gsx$death.$t" },
-                    { "mDataProp": "gsx$injury.$t" },
                     { "mDataProp": "gsx$catcode.$t" },
                             ]
             } );
