adverse events fixes

--- a/20160218-adverse_events/index.html
+++ b/20160218-adverse_events/index.html
@@ -29,11 +29,11 @@
 <body>
 <div id="wrapper">
 
-<div class="chartTitle">Hospitals with 10+ adverse events 2005-2016</div>
+<div class="chartTitle">Hospitals with 5+ adverse events 2015</div>
 <div id="chart"></div>
 
 <div class="chartTitle">Database of adverse hospital events 2005-2016</div>
-<table width="100%" cellspacing="0" class="display compact responsive nowrap" id="events"><thead><tr><th>Year</th><th>Hospital</th><th>City</th><th>Event</th><th>Type</th></tr></thead></table>
+<table width="100%" cellspacing="0" class="display compact responsive nowrap" id="events"><thead><tr><th>Year</th><th>Hospital</th><th>City</th><th>Event</th><th>Victims</th><th>Deaths</th><th>Injuries</th><th>Type</th></tr></thead></table>
 
 <a href='https://docs.google.com/spreadsheets/d/1jvziIFqm2fkcTgpigumWV2aM8XBPy6SjxE5_pAt9BII/pub?output=csv' target='new_'><button class='downloadButton'>&#9660; Download Data</button></a>
 
@@ -132,6 +132,9 @@ var chartDecade = c3.generate({
                     { "mDataProp": "gsx$hospital.$t" },
                     { "mDataProp": "gsx$city.$t" },
                     { "mDataProp": "gsx$category.$t" },
+                    { "mDataProp": "gsx$number.$t" },
+                    { "mDataProp": "gsx$death.$t" },
+                    { "mDataProp": "gsx$injury.$t" },
                     { "mDataProp": "gsx$catcode.$t" },
                             ]
             } );
