adverse events fixes FUCK

--- a/20160218-adverse_events/index.html
+++ b/20160218-adverse_events/index.html
@@ -33,7 +33,7 @@
 <div id="chart"></div>
 
 <div class="chartTitle">Database of adverse hospital events 2005-2016</div>
-<table width="100%" cellspacing="0" class="display compact responsive nowrap" id="events"><thead><tr><th>Year</th><th>Hospital</th><th>City</th><th>Event</th><th>Victims</th><th>Deaths</th><th>Injuries</th><th>Type</th></tr></thead></table>
+<table width="100%" cellspacing="0" class="display compact responsive nowrap" id="events"><thead><tr><th>Year</th><th>Hospital</th><th>City</th><th>Event</th><th>Incidents</th><th>Deaths</th><th>Injuries</th><th>Type</th></tr></thead></table>
 
 <a href='https://docs.google.com/spreadsheets/d/1jvziIFqm2fkcTgpigumWV2aM8XBPy6SjxE5_pAt9BII/pub?output=csv' target='new_'><button class='downloadButton'>&#9660; Download Data</button></a>
 
