--- a/rental_housing/index.html
+++ b/rental_housing/index.html
@@ -19,7 +19,7 @@
   .tableCell { display:inline-block; padding:10px; border-bottom:1px solid #ddd; font-family:"Benton Sans"; }
   .tableBreak { clear:both; display:block; }
   .table { text-align:center; width:100%; overflow-x:hidden; overflow-y:auto; height:670px; }
-  #table { font-size:.7em; height:815px; overflow-x:hidden; overflow-y:auto; }
+  #table { font-size:.7em; height:780px; overflow-x:hidden; overflow-y:auto; }
   .change, .pct { font-weight:900; width:20%; }
   .cityCell { width:40%; }
   .rents { width:20%; }
@@ -48,8 +48,17 @@
 
   #leftSide { float:left; width:48%; }
   #rightSide { float:right; width:48%; }
+  #rentalChange { text-align:center; }
+  #infobox, .chartTitle { text-align:center; }
 
   #chart .c3-chart-line { stroke-width: 3px !important; }
+    
+  @media (max-width: 750px) {
+  #leftSide, #rightSide { float:none; width:100%; }
+  #table { height:120px; }
+  .chartTitle { font-size:1em; }
+  }
+
   </style> 
 </head>
 
@@ -58,17 +67,17 @@
 
 <div class="chartTitle">Change in affordable rental units 2000 to 2014</div>
 
+<div id="rightSide">
+
+<div id="filter" class="filter"><input type="search" class="filter_box" placeholder="Search by city"></input></div>
+
+<div id="table"><div class='tableHead rSort cityCell' data="city">City or Township</div><div class='tableHead rSort selected rents' data="units">Units</div><div class='tableHead rSort pct' data="under50">Units <50%</div><div class='tableHead rSort pct' data="under80">Units <80%</div></div>
+</div>
+
+</div>
+
 <div id="leftSide">
-<div id="map"><svg></svg></div>
-
 <div class="breaker"></div>
-
-<div id="infobox">Metro Area</div>
-
-<div id="rentalChange"><div class='negDark'>-8,874 affordable rental units</div></div>
-
-<div class="breaker"></div>
-
   <div class="legends">
     <div class="legendContainer">
       <span class='legend'>
@@ -88,6 +97,12 @@
     <small>Change in affordable rental units</small>
   </div>
 
+<div id="map"><svg width="320" height="350" viewBox="0 0 500 550" preserveAspectRatio="xMidYMid"></svg></div>
+
+<div id="infobox">Metro Area</div>
+
+<div id="rentalChange"><div class='negDark'>-8,874 affordable rental units</div></div>
+
 <div class="breaker"></div>
 
 <div class="zoom">Reset View</div>
@@ -97,14 +112,6 @@
 
 </div>
 
-<div id="rightSide">
-
-<div id="filter" class="filter"><input type="search" class="filter_box" placeholder="Search by city"></input></div>
-
-<div id="table"><div class='tableHead rSort selected cityCell' data="city">City or Township</div><div class='tableHead rSort rents' data="units">Units</div><div class='tableHead rSort pct' data="under50">Units <50%</div><div class='tableHead rSort pct' data="under80">Units <80%</div></div>
-</div>
-
-  </div>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -121,6 +128,19 @@ d3.json("https://script.googleusercontent.com/macros/echo?user_content_key=uVCkN
 
 var dataHousing = json.rentalHousing;
 var dataBurden = json2.costBurden;
+
+var aspect = 440 / 300, chart = $("#map svg");
+$(window).on("resize", function() {   
+  var targetWidth = chart.parent().width();   
+  chart.attr("width", targetWidth);   
+  chart.attr("height", targetWidth / aspect);
+});
+
+$(window).on("load", function() {   
+  var targetWidth = chart.parent().width();   
+  chart.attr("width", targetWidth);   
+  chart.attr("height", targetWidth / aspect);
+});
 
 $(".rSort").click(function() {
   $(".rSort").removeClass("selected");
@@ -421,6 +441,7 @@ $(".zoom").click(function() {
   clicked2();
   $('#infobox').html("Metro Area");
   $(".card").show();
+  $(".city").removeClass("selected");
   $("#rentalHousing").html("<div class='negDark'>-8,874 affordable rental units</div>");
   redrawChart(chart,"Metro",dataBurden);
 });
