added data drop filter

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 <div id="dataSidebar">
 <div id="sorting" class="sectionBox">
 <div class="sort-link" id="allProjects">All Projects<div class="count">0</div></div>
+<div class="sort-link" id="datadrop">Data Drop<div class="count">0</div></div>
 <div class="sort-link" id="economics">Business and Economics<div class="count">0</div></div>
 <div class="sort-link" id="crime">Criminal Justice<div class="count">0</div></div>
 <div class="sort-link" id="demographics">Demographics<div class="count">0</div></div>
